--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,4 @@
- @import "./variables.scss";
+@import "./variables.scss";
 @import "./libs/normalize.scss";
 @import "./components/all.scss";
 
@@ -13,25 +13,65 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+  @media (max-width: 685px) {
+    width: calc(100vw - 20px);
+    margin-top: 15px;
+  }
 }
 
 .content {
   padding: 40px 0;
 
   &__title {
-    margin: 35px 0;
+    font-weight: 800;
+    font-size: 38px;
+    margin-top: 60px;
+    margin-bottom: 50px;
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 11px;
+    @media (max-width: 1400px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media (max-width: 1060px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width: 730px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    ul {
+      margin-right: 20px;
+    }
+    @media (max-width: 1260px) {
+      flex-direction: column;
+      .categories {
+        width: 100%;
+        overflow: auto;
+        ul {
+          margin-bottom: 30px;
+          width: 750px;
+        }
+      }
+    }
+    @media (max-width: 650px) {
+      .categories {
+        ul {
+          li {
+            padding: 8px 20px;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -54,7 +94,10 @@ body {
     justify-content: space-between;
     align-items: center;
   }
-
+  .content__items {
+    display: flex;
+    flex-direction: column;
+  }
   .content__title {
     display: flex;
     align-items: center;
