--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,6 +5,13 @@
   padding: 40px 0;
 
   .container {
+    @media (max-width: 645px) {
+      flex-direction: column;
+      text-align: left;
+      .header__logo {
+        margin-bottom: 30px;
+      }
+    }
     display: flex;
     align-items: center;
     justify-content: space-between;
